Add Post Schema and Docs. Add skeleton for reply comments
